# fine_tuning_gemma

./: README.md  inference.py  load_tuned_model.py  pyproject.toml  test_cpu.py  training.py
config/: settings.py
final_adapter/: adapter_config.json
